package com.akatsuki.gpsapp.models.enums;

public enum Rights {
    ADMIN,
    EDITOR,
    VIEWER;
}
