package com.akatsuki.gpsapp.models.enums;

public enum Role {

    ADMIN,
    USER,
    GUEST;

}
