package com.akatsuki.gpsapp.models.enums;

public enum TokenType {
    AUTHENTIFICATION,
    SHARE;

}
